<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samtheknife.www.zaptrash.TrashActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="321dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:contentDescription="@android:string/ok"
            android:ems="10"
            android:hint="@string/zzz_text"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:text="@string/button_msg"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_light"
            android:backgroundTint="@color/colorPrimaryDark"
            tools:text="@string/button_msg"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="11dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="252dp"
            android:layout_height="59dp"
            android:onClick="sendMessage"
            android:text="Sendzz"
            tools:text="@string/send_msg"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/editText"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="35dp"
            app:layout_constraintVertical_bias="0.46"
            android:layout_marginStart="35dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/gps_button_txt"
            app:layout_constraintHorizontal_bias="0.483"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="198dp"
            android:layout_height="58dp"
            android:contentDescription="@string/zzz_text"
            android:text="@string/goat_txt"
            android:background="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="100dp"
            tools:text="@string/zzz_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
